Glow Card Effect Modified Done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "my-v0-project",
+  "name": "event-management-frontend",
+  "license": "MIT",
   "version": "0.1.0",
   "private": true,
   "scripts": {
