--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.23.26",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "motion": "^12.23.26",
     "next": "16.0.7",
     "next-themes": "latest",
     "react": "19.2.0",
